Visual: View distance, details and user interface settings.
Effect: Toggle visual effects on/off.

Settings have been moved around to proper categories and following new settings are available:
Ambient subtitles, Blood detail, Inventory columns, Item effects, Lock scrambling, Mouse smoothing, Play intro, Turning speed, Video scaling, Weapon trails, Window animations.


	Quest Changes

Changed Kervo's quest to cancel in chapter 4, causing Kervo and Geppert to be killed by a Lurker instead of them disappearing.
Changed Buster to give reduced gold for each Shadowbeast Horn, but still way more then regular merchants.


	NPC Improvements and Changes

Fixed wrong or inconsistent style of dialogue text for Bartok, Bosper, Bill, Cassia, Diego, Edgor, Hyglas, Jesper, Jergan, Karras, Lares, Parlan, Pyrokar, Ramirez, Raoul, Scatty.
Fixed XP award for pickpocketing Valentino, Salandril, Cavalorn, Dobar, Engor, Franco and Francis.
Fixed XP award for recruiting Lares and Lester.

Changed all living pirates to generate ambient inventories.

Angar has same weapon everywhere as in the Valley of Mines.
Bandit 10008 warns NH not to wake up Skinner only if he has not already done so.
Brandon quest cancels if he is killed.
Buster buys Shadowbeast Horns, even if NH does not know how to remove them.
Buster does not drop Shadowbeast Horns given to him.
Cassia can give the Blood Chalice quest, even if NH was a wanted thief.
Cassia cannot be paid for learning to pickpocket if it’s already learned.
Cassias quests become obsolete if the paladins take care of the guild.
Diego can teach strength in Khorinis.
Diego cannot be led to Pedrakhan.
Dragomir immediately equips his crossbow after receiving it.
Esteban does not turn to his guards if they are dead.
Esteban's bodyguards go running to meet Fisk.
Garond can be told about Silvestro's mining site even if Diego has died.
Girion does not count towards max ship crew.
Gorax waits for NH at church gate to offer him the task to kill Pedro.